# SocietyofScientists

./: .gitignore  MANIFEST.in  README.md  README_ENV.md  README_ENV_SETUP.md  README_FRONTEND.md  SCIENCEAGENTS.md  SETUP_AND_TEST.md  agent-with-langgraph-and-tavili.ipynb  pyproject.toml  requirements.txt  setup.py
.cache/41/: cache.db
Notebooks/: SciAgents_ScienceDiscovery_GraphReasoning_automated.ipynb
ScienceDiscovery/: agents.py
docs/: CONFIGURATION.md  INDEX.md  INSTALLATION.md  QUICK_START.md  README.md
docs/api/: API_KEYS_STATUS.md  API_KEY_TEST_RESULTS.md  API_TEST_RESULTS.md  JAMBA_MODELS_AVAILABLE.md  README.md  REFERENCE.md  VERIFY_KEYS.md
docs/architecture/: AGENTS.md  OVERVIEW.md  PIPELINE.md
docs/cost-tracking/: COST_TRACKING.md  (+3 more)
examples/: basic_usage.py  multi_agent_system.py  panel_ui.py  simple_chat.py  track_costs.py  use_cached_data.py
frontend/: README.md  index.html  package.json  pnpm-lock.yaml
scripts/: check-env.ps1  setup-env.ps1  start-backend-background.ps1  start-backend.ps1  test_integration.py
society_of_scientists/: __init__.py  __main__.py  agent_list.py  exa.py  exa_agent.py  exa_files.py  exa_grab_data.py  exported_computational_neuroscience_100.txt  exported_computer_vision_100.txt  exported_large_language_models_100.txt  jamba.py  jamba_working.py  testing.py
tests/: __init__.py  check_ai21_models_api.py  check_jamba_models.py  test_actual_usage.py  test_after_billing.py  test_all_ai21_models.py  test_api_keys.py  test_cache.py  test_cost_tracking.py  test_jamba_large.py  test_new_key.py  test_rate_limiter.py
(+88 files in other folders)
