[project]
name = "societyofscientists"
version = "0.1.0"
description = "A multi-agent AI system for collaborative research grant proposal generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ag2[openai]>=0.10.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "python-socketio>=5.10.0",
    "ai21",
    "exa-py",
    "panel",
    "fpdf",
    "markdown",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
